--- a/src/AdventOfCode/AdventOfCode.fsproj
+++ b/src/AdventOfCode/AdventOfCode.fsproj
@@ -7,7 +7,11 @@
     <Content Include="Day1/Day1PuzzleInput.txt">
     <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Day2/Day2PuzzleInput.txt">
+    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Compile Include="Day1/FuelCounter.fs" />
+    <Compile Include="Day2/ProgramAlarm.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 </Project>
